Drop use of EggDesktopfile in GsmAutostartApp

This requires a few additions to the GDesktopAppInfo API,
which have landed in GLib 2.35.3.

https://bugzilla.gnome.org/show_bug.cgi?id=688499